--- a/src/Config/CS_SDK.props
+++ b/src/Config/CS_SDK.props
@@ -1,11 +1,11 @@
 <Project>
   <PropertyGroup>
-    <Platforms>AnyCPU;NET60_Linux;</Platforms>
+    <Platforms>AnyCPU;NET80_Linux;</Platforms>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <PlatformTarget >x64</PlatformTarget>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">16.0</VisualStudioVersion>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <FileAlignment>512</FileAlignment>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath> 
@@ -49,7 +49,7 @@
     <GenerateDependencyFile>false</GenerateDependencyFile>
   </PropertyGroup>
   <PropertyGroup Condition="$(Platform.Contains('AnyCPU'))" >
-    <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <DefineConstants>$(DefineConstants);_WINDOWS</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="$(Platform.Contains('Linux'))" >
@@ -57,13 +57,13 @@
     <DefineConstants>$(DefineConstants);_LINUX</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(UILib)' == 'true' AND $(RuntimeIdentifier.Contains('win'))">
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
   <!--Temporary configuration to make core test projects load UI packages successfully -->
   <PropertyGroup Condition=" '$(TestProjectDefaults)' == 'true' AND $(RuntimeIdentifier.Contains('win')) ">
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
@@ -151,7 +151,7 @@
       <!--Remove these properties (SystemDrawingDllPath) and all references to it from all csproj files when we get rid of net48-->
       <SystemDrawingDllPath Condition=" '$(TargetFramework)' == 'net48' ">$(FrameworkAssembliesPath)System.Drawing.dll</SystemDrawingDllPath>
       <!--SystemDrawingDllPath is left empty for net6 because resources will auto resolve to the system.drawing package dll -->
-      <SystemDrawingDllPath Condition=" '$(TargetFramework)' == 'net60' "></SystemDrawingDllPath>
+      <SystemDrawingDllPath Condition=" '$(TargetFramework)' == 'net80' "></SystemDrawingDllPath>
     </PropertyGroup>
   </Target>
   <Choose>
