--- a/src/Libraries/DSOfficeUtilities/DSOfficeUtilities.csproj
+++ b/src/Libraries/DSOfficeUtilities/DSOfficeUtilities.csproj
@@ -12,7 +12,7 @@
   <PropertyGroup>
     <NoWarn>MSB3539;CS1591;NUnit2005;NUnit2007;CS0618;CS0612;CS0672</NoWarn>
   </PropertyGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
     <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001">
         <ExcludeAssets>all</ExcludeAssets>
         <GeneratePathProperty>true</GeneratePathProperty>
@@ -22,7 +22,7 @@
         <WrapperTool>tlbimp</WrapperTool>
         <Private>False</Private>
     </Reference>
-    <COMReference Include="Microsoft.Office.Core" Condition=" '$(RuntimeIdentifier)' == 'win10-x64' ">
+    <COMReference Include="Microsoft.Office.Core" Condition=" '$(RuntimeIdentifier)' == 'win-x64' ">
         <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
         <VersionMajor>2</VersionMajor>
         <VersionMinor>8</VersionMinor>
